# KosuzuRender

./: .clang-format  .gitignore  CMakeLists.txt
include/: geometry.h  kosuzu.h  model.h  transform.h  widget.h
src/: main.cpp  model.cpp  transform.cpp  widget.cpp  widget.ui
